# regex

./: Cargo.toml  README.md  notes.txt
examples/: shootout-regex-dna-bytes.rs  shootout-regex-dna-cheat.rs  shootout-regex-dna-replace.rs  shootout-regex-dna-single-cheat.rs  shootout-regex-dna-single.rs  shootout-regex-dna.rs
src/: compile.rs  exec.rs  expand.rs  input.rs  lib.rs  pikevm.rs  prog.rs  re_builder.rs  re_bytes.rs  re_set.rs  re_unicode.rs
src/regex/: exec.rs.html  input.rs.html  lib.rs.html  literals.rs.html  re_unicode.rs.html
tests/: bytes.rs  macros_bytes.rs  macros_str.rs  plugin.rs  test_backtrack.rs  test_backtrack_bytes.rs  test_backtrack_utf8bytes.rs  test_default.rs  test_default_bytes.rs  test_nfa.rs  test_nfa_bytes.rs  test_nfa_utf8bytes.rs
