[package]
name = "streaming_regex"
version = "0.2.5"  #:version
authors = ["Nathan Vegdahl", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cessen/streaming_regex"
#documentation = "https://docs.rs/streaming_regex"
description = """
A fork of the regex crate that allows running regex on non-contiguous inputs.
"""
categories = ["text-processing"]


[dependencies]
# For very fast prefix literal matching.
aho-corasick = "0.6.0"
# For skipping along search text quickly when a leading byte is known.
memchr = "2.0.0"
# For managing regex caches quickly across multiple threads.
thread_local = "0.3.2"
# For parsing regular expressions.
regex-syntax = "0.4.1"
# For compiling UTF-8 decoding into automata.
utf8-ranges = "1.0.0"

[dev-dependencies]
# For examples.
lazy_static = "1"
# For property based tests.
quickcheck = { version = "0.6", default-features = false }
# For generating random test data.
rand = "0.4"

# Run the test suite on the default behavior of Regex::new.
# This includes a mish mash of NFAs and DFAs, which are chosen automatically
# based on the regex. We test both of the NFA implementations by forcing their
# usage with the test definitions below. (We can't test the DFA implementations
# in the same way since they can't be used for every regex tested.)
[[test]]
path = "tests/test_default.rs"
name = "default"

# The same as the default tests, but run on bytes::Regex.
[[test]]
path = "tests/test_default_bytes.rs"
name = "default-bytes"

# Run the test suite on the NFA algorithm over Unicode codepoints.
[[test]]
path = "tests/test_nfa.rs"
name = "nfa"

# Run the test suite on the NFA algorithm over bytes that match UTF-8 only.
[[test]]
path = "tests/test_nfa_utf8bytes.rs"
name = "nfa-utf8bytes"

# Run the test suite on the NFA algorithm over arbitrary bytes.
[[test]]
path = "tests/test_nfa_bytes.rs"
name = "nfa-bytes"

# Run the test suite on the backtracking engine over Unicode codepoints.
[[test]]
path = "tests/test_backtrack.rs"
name = "backtrack"

# Run the test suite on the backtracking engine over bytes that match UTF-8
# only.
[[test]]
path = "tests/test_backtrack_utf8bytes.rs"
name = "backtrack-utf8bytes"

# Run the test suite on the backtracking engine over arbitrary bytes.
[[test]]
path = "tests/test_backtrack_bytes.rs"
name = "backtrack-bytes"

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
debug = true
